# mat

./: .gitignore  .gitlab-ci.yml  LICENSE  README.adoc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: test.mat.json  test_complex_types.mat.json
src/memory_atlas/: mat_json.py  models.py
src/memory_atlas/editor/: __main__.py  compile_ui.sh  detail_panels.py  main_window.py  main_window.ui  tree_view.py  ui_main_window.py  ui_mainwindow.py
src/memory_atlas/editor/icons/: README.adoc  icons.qrc  ui_icons.py
src/memory_atlas/mat_types/: __init__.py  complex.py  primitive.py
tests/: test_serialize.py  test_tree_view.py  test_types.py  test_validation.py
